[package]
name = "back"
version = "0.1.0"
authors = ["Renhao Huang <z5111342@ad.unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smart-contract = "0.2.0"
smart-contract-macros = "0.2.0"
json = "0.12.0"
